--- a/ishTime/MainWindow.xaml
+++ b/ishTime/MainWindow.xaml
@@ -5,11 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ishTime"
         mc:Ignorable="d"
+        Closing="Window_Closing"
         Title="ish Time" Height="800" Width="450" ResizeMode="NoResize" Background="#5B0888" FontFamily="Segoe UI Black">
     <Grid>
-        <TextBlock FontSize="80" Height="400" Margin="0,400,0,0" TextAlignment="Center" Foreground="#E5CFF7">
+        <TextBlock Name="timeText" FontSize="80" Height="100" Margin="0,200,0,0" TextAlignment="Center" Foreground="#E5CFF7">
             01:21:33
         </TextBlock>
+        <TextBlock Name="todayText" FontSize="40" Height="100" Margin="0,400,0,0" TextAlignment="Center" Foreground="#E5CFF7" Text="Today: 3h"/>
         <Button Width="300" Height="300" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,50,0,0" Click="Button_Click">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
@@ -21,6 +23,5 @@
             </Button.Template>
             <Image Name="playButton" Height="177" Width="177" Source="/resources/play.png"/>
         </Button>
-
     </Grid>
 </Window>
