--- a/ishTime/MainWindow.xaml
+++ b/ishTime/MainWindow.xaml
@@ -5,24 +5,42 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ishTime"
         mc:Ignorable="d"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         Closing="Window_Closing"
         Icon="Icon1.ico"
-        Title="ish Time" Height="800" Width="450" ResizeMode="NoResize" Background="#5B0888" FontFamily="Segoe UI Black">
+        Title="ish Time" Height="800" Width="1000" ResizeMode="NoResize" Background="#262038" FontFamily="Segoe UI Black">
     <Grid>
-        <TextBlock Name="timeText" FontSize="80" Height="100" Margin="0,200,0,0" TextAlignment="Center" Foreground="#E5CFF7">
+        <Grid HorizontalAlignment="Left" Height="784" VerticalAlignment="Center" Width="450">
+            <TextBlock Name="timeText" FontSize="80" Height="100" Margin="0,442,0,242" TextAlignment="Center" Foreground="#E5CFF7" Grid.ColumnSpan="2">
             01:21:33
-        </TextBlock>
-        <TextBlock Name="todayText" FontSize="40" Height="100" Margin="0,400,0,0" TextAlignment="Center" Foreground="#E5CFF7" Text="Today: 3h"/>
-        <Button Width="300" Height="300" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,50,0,0" Click="Button_Click">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Grid>
-                        <Ellipse Width="300" Height="300" Fill="#713ABE"/>
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Grid>
-                </ControlTemplate>
-            </Button.Template>
-            <Image Name="playButton" Height="177" Width="177" Source="/resources/play.png"/>
-        </Button>
+            </TextBlock>
+            <TextBlock Name="todayText" FontSize="40" Height="50" Margin="0,552,0,182" TextAlignment="Center"  Foreground="#E5CFF7" Text="Today: 3h" Grid.ColumnSpan="2"/>
+            <Button Width="250" Height="250" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,50,0,0" Click="Button_Click" Grid.Column="1"
+                >
+                <Button.Template>
+                    <ControlTemplate TargetType="Button">
+                        <Grid>
+                            <Ellipse Width="250" Height="250" Fill="#342b50"/>
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Button.Template>
+                <Image Name="playButton" Height="177" Width="177" Source="/resources/play.png"/>
+            </Button>
+        </Grid>
+        <Grid Width="550" HorizontalAlignment="Right">
+            <Border BorderThickness="1" HorizontalAlignment="Center" Height="390" VerticalAlignment="Top" Width="550">
+                <Calendar HorizontalAlignment="Center"  Margin="10,10,10,10" Height="390" VerticalAlignment="Center" Width="550"  Style="{StaticResource MaterialDesignCalendarPortrait}" materialDesign:CalendarAssist.HeaderBackground="Indigo"
+                          materialDesign:CalendarAssist.HeaderForeground="MediumPurple" materialDesign:CalendarAssist.SelectionColor="MediumPurple"/>
+            </Border>
+            <Border BorderThickness="1" HorizontalAlignment="Left" Height="390" VerticalAlignment="Bottom" Width="550">
+                
+            </Border>
+
+
+
+        </Grid>
+
+
     </Grid>
 </Window>
